<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_title">My Nanodegree Apps!</string>
    <string name="button_spotify">spotify streamer</string>
    <string name="button_scores">scores app</string>
    <string name="button_library">library app</string>
    <string name="button_build">build it bigger</string>
    <string name="button_xyz">xyz reader</string>
    <string name="button_capstone">capstone: my own app</string>

    <string name="toast_pretext">This button will launch my\u0020</string>
    <string name="toast_spotify">spotify streamer!</string>
    <string name="toast_scores">scores app!</string>
    <string name="toast_library">library app!</string>
    <string name="toast_build">build it bigger app!</string>
    <string name="toast_xyz">XYZ reader!</string>
    <string name="toast_capstone">capstone app!</string>
</resources>