<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_view_title"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/text_view_vertical_margin"/>

    <Button
        style="@style/button_style"
        android:id="@+id/button_spotify"
        android:text="@string/button_spotify" />

    <Button
        style="@style/button_style"
        android:id="@+id/button_scores"
        android:text="@string/button_scores" />

    <Button
        style="@style/button_style"
        android:id="@+id/button_library"
        android:text="@string/button_library" />


    <Button
        style="@style/button_style"
        android:id="@+id/button_build"
        android:text="@string/button_build" />

    <Button
        style="@style/button_style"
        android:id="@+id/button_xyz"
        android:text="@string/button_xyz" />

    <Button
        style="@style/button_style"
        android:id="@+id/button_capstone"
        android:background="@color/button_capstone_color"
        android:text="@string/button_capstone"
        android:textColor="@android:color/white"/>


</LinearLayout>
